; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_time.c_ASN1_TIME_compare.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_time.c_ASN1_TIME_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ASN1_TIME_compare(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @ASN1_TIME_diff(i32* %6, i32* %7, i32* %8, i32* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 -2, i32* %3, align 4
  br label %28

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  %15 = icmp sgt i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %13
  %17 = load i32, i32* %7, align 4
  %18 = icmp sgt i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %16, %13
  store i32 1, i32* %3, align 4
  br label %28

20:                                               ; preds = %16
  %21 = load i32, i32* %6, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %20
  %24 = load i32, i32* %7, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %23, %20
  store i32 -1, i32* %3, align 4
  br label %28

27:                                               ; preds = %23
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %26, %19, %12
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @ASN1_TIME_diff(i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
